Fj 2024 lesson 7 (#2)
* Сделал внедрение бинов через конструкторы

* Добавил JaCoCo

* Добавил коментарии, чтобы тесты отображались в pr

* Добавил зависимости для тестирование с TestContainers и WireMock

* Сделал url для запроса передаваемым параметром

* Написал интеграционный тест для сервиса загрузки данных из KudaGo