@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'jacoco'
 }
 
 group = 'com.fin'
@@ -21,7 +22,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 	implementation 'org.aspectj:aspectjweaver'
@@ -31,8 +31,29 @@ dependencies {
 	implementation 'ch.qos.logback:logback-classic:1.4.12'
 
 	testImplementation 'org.assertj:assertj-core:3.24.2'
+
+
+
+	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("org.testcontainers:junit-jupiter")
+	testImplementation("com.github.tomakehurst:wiremock-jre8:2.35.0")
+	testImplementation("org.mockito:mockito-core:4.10.0")
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.test {
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
+
+jacocoTestReport {
+	reports {
+		html.required = true
+		xml.required  = true
+	}
+
+	classDirectories.setFrom(classDirectories.files - files("build/classes/java/main/com/fin/models"))
 }
